<resources>
    <string name="app_name">Unit Convertor</string>
    <string name="length">Length</string>
    <string name="weight">weight</string>
    <string name="time">time</string>
    <string name="unit_convertor">What do you want to convert?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="input">Input:</string>
    <string name="output">Output:</string>
    <string name="convert">Convert</string>
    <string name="waiting_for_input">I\'m waiting for input number!</string>
    <string name="temperature">Temperature</string>
    <string name="kilometer">kilometer</string>
    <string name="km">km</string>
    <string name="meter">meter</string>
    <string name="m">m</string>
    <string name="decimeter">decimeter</string>
    <string name="dm">dm</string>
    <string name="cm">cm</string>
    <string name="centimeter">centimeter</string>
    <string name="millimeter">millimeter</string>
    <string name="mm">mm</string>
    <string name="mile">mile</string>
    <string name="mi">mi</string>
    <string name="yard">yard</string>
    <string name="yd">yd</string>
    <string name="foot">foot</string>
    <string name="ft">ft</string>
    <string name="kilogram">kilogram</string>
    <string name="kg">kg</string>
    <string name="gram">gram</string>
    <string name="g">g</string>
    <string name="milligram">milligram</string>
    <string name="mg">mg</string>
    <string name="tonne">tonne</string>
    <string name="t">t</string>
    <string name="pound">pound</string>
    <string name="lb">lb</string>
    <string name="ounce">ounce</string>
    <string name="oz">oz</string>
    <string name="second">second</string>
    <string name="s">s</string>
    <string name="minute">minute</string>
    <string name="min">min</string>
    <string name="hour">hour</string>
    <string name="h">h</string>
    <string name="day">day</string>
    <string name="d">d</string>
    <string name="month">month</string>
    <string name="year">year</string>
</resources>