<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/convert_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/convert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            style="@style/title_buttons"/>

        <TextView
            android:id="@+id/from_lb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/to_lb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/to"
            app:layout_constraintEnd_toEndOf="@+id/from_lb"
            app:layout_constraintStart_toStartOf="@+id/from_lb"
            app:layout_constraintTop_toBottomOf="@+id/from_lb"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/from_spin"
            android:layout_height="27dp"
            android:layout_width="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/from_lb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/from_lb"
            app:layout_constraintTop_toTopOf="@+id/from_lb" />

        <Spinner
            android:id="@+id/to_spin"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/to_lb"
            app:layout_constraintEnd_toEndOf="@+id/from_spin"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/from_spin"
            app:layout_constraintTop_toTopOf="@+id/to_lb" />

        <EditText
            android:id="@+id/input_et"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/input_lb"
            app:layout_constraintEnd_toEndOf="@+id/to_spin"
            app:layout_constraintStart_toStartOf="@+id/to_spin"
            app:layout_constraintTop_toTopOf="@+id/input_lb" />

        <TextView
            android:id="@+id/input_lb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/input"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/to_lb"
            app:layout_constraintStart_toStartOf="@+id/to_lb"
            app:layout_constraintTop_toBottomOf="@+id/to_lb" />

        <TextView
            android:id="@+id/output_lb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/output"
            app:layout_constraintEnd_toEndOf="@+id/input_lb"
            app:layout_constraintStart_toStartOf="@+id/input_lb"
            app:layout_constraintTop_toBottomOf="@+id/input_lb"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/result_lb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/output_lb"
            app:layout_constraintEnd_toEndOf="@+id/input_et"
            app:layout_constraintStart_toStartOf="@+id/input_et"
            app:layout_constraintTop_toTopOf="@+id/output_lb"
            android:textSize="22sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>